# PhotoSort

./: .gitignore  CLAUDE.md  README.md  main.py  mainnas.py  plan.md  pyproject.toml  requirements.txt  sort_photos.py
.github/workflows/: release.yml
scripts/: dmg_background.py
src/photosort/: __init__.py  __main__.py  cli.py  constants.py  date_extract.py  device_detect.py  engine.py  hashing.py  models.py  report.py  screenshot_detect.py  video_detect.py
src/photosort/gui/: app.py  widgets.py  worker.py
tests/: conftest.py  test_date_extract.py  test_device_detect.py  test_edge_cases.py  test_engine.py  test_hashing.py
